[package]
name = "vector-tunnels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Microsoft Dev Tunnels client (Mac side) — Phase 8 Vector Tunnel Agent integration."
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "io-util"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
vector-mux = { path = "../vector-mux", version = "2026.5.10" }
vector-secrets = { path = "../vector-secrets", version = "2026.5.10" }
vector-tunnel-protocol = { workspace = true }
chrono = { workspace = true }
tunnels = { workspace = true }

[dev-dependencies]
regex = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "test-util"] }
tracing-subscriber = { workspace = true }
